fixes nowrap to elements in experiences and projects list

--- a/src/app/components/home/home-page/home-page.component.scss
+++ b/src/app/components/home/home-page/home-page.component.scss
@@ -35,8 +35,9 @@
 }
 
 .card {
-  max-width: 25%;
-  max-height: 300px;
+  max-width: 400px;
+  max-height: 600px;
+  margin-bottom: 20px;
   overflow: hidden;
   cursor: pointer;
   background-color: #1b242979;
